--- a/SiGCT/packages.config
+++ b/SiGCT/packages.config
@@ -2,9 +2,11 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="bootstrap" version="3.0.0" targetFramework="net45" />
+  <package id="EntityFramework" version="6.0.0" targetFramework="net45" />
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net45" />
   <package id="jQuery" version="1.10.2" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
+  <package id="log4net" version="2.0.4" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
@@ -14,5 +16,10 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
   <package id="NHibernate" version="4.0.4.4000" targetFramework="net45" />
+  <package id="NHibernate.Envers" version="2.0.0" targetFramework="net45" />
+  <package id="System.Data.SQLite" version="1.0.98.1" targetFramework="net45" />
+  <package id="System.Data.SQLite.Core" version="1.0.98.1" targetFramework="net45" />
+  <package id="System.Data.SQLite.EF6" version="1.0.98.1" targetFramework="net45" />
+  <package id="System.Data.SQLite.Linq" version="1.0.98.1" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
