Ajustes no projeto incluindo os arquivos hbm no build

--- a/SiGCT/SiGCT.csproj
+++ b/SiGCT/SiGCT.csproj
@@ -148,29 +148,29 @@
     <Content Include="Content\Site.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
-    <Content Include="Models\Ajuste.hbm.xml" />
-    <Content Include="Models\Banco.hbm.xml" />
-    <Content Include="Models\Categoria.hbm.xml" />
-    <Content Include="Models\Chamada.hbm.xml" />
-    <Content Include="Models\CentroCusto.hbm.xml" />
-    <Content Include="Models\Cliente.hbm.xml" />
-    <Content Include="Models\Desconto.hbm.xml" />
-    <Content Include="Models\CSP.hbm.xml" />
-    <Content Include="Models\Conta.hbm.xml" />
-    <Content Include="Models\Cobranca.hbm.xml" />
-    <Content Include="Models\CNL.hbm.xml" />
-    <Content Include="Models\EnderecosRecurso.hbm.xml" />
-    <Content Include="Models\Fatura.hbm.xml" />
-    <Content Include="Models\InformativoGerencial.hbm.xml" />
-    <Content Include="Models\NotaFiscal.hbm.xml" />
-    <Content Include="Models\Operadora.hbm.xml" />
-    <Content Include="Models\Plano.hbm.xml" />
-    <Content Include="Models\Pessoa.hbm.xml" />
-    <Content Include="Models\Resumo.hbm.xml" />
-    <Content Include="Models\Recurso.hbm.xml" />
-    <Content Include="Models\Servico.hbm.xml" />
-    <Content Include="Models\TipoCobranca.hbm.xml" />
-    <Content Include="Models\Trailler.hbm.xml" />
+    <EmbeddedResource Include="Models\Ajuste.hbm.xml" />
+    <EmbeddedResource Include="Models\Banco.hbm.xml" />
+    <EmbeddedResource Include="Models\Categoria.hbm.xml" />
+    <EmbeddedResource Include="Models\Chamada.hbm.xml" />
+    <EmbeddedResource Include="Models\CentroCusto.hbm.xml" />
+    <EmbeddedResource Include="Models\Cliente.hbm.xml" />
+    <EmbeddedResource Include="Models\Desconto.hbm.xml" />
+    <EmbeddedResource Include="Models\CSP.hbm.xml" />
+    <EmbeddedResource Include="Models\Conta.hbm.xml" />
+    <EmbeddedResource Include="Models\Cobranca.hbm.xml" />
+    <EmbeddedResource Include="Models\CNL.hbm.xml" />
+    <EmbeddedResource Include="Models\EnderecosRecurso.hbm.xml" />
+    <EmbeddedResource Include="Models\Fatura.hbm.xml" />
+    <EmbeddedResource Include="Models\InformativoGerencial.hbm.xml" />
+    <EmbeddedResource Include="Models\NotaFiscal.hbm.xml" />
+    <EmbeddedResource Include="Models\Operadora.hbm.xml" />
+    <EmbeddedResource Include="Models\Plano.hbm.xml" />
+    <EmbeddedResource Include="Models\Pessoa.hbm.xml" />
+    <EmbeddedResource Include="Models\Resumo.hbm.xml" />
+    <EmbeddedResource Include="Models\Recurso.hbm.xml" />
+    <EmbeddedResource Include="Models\Servico.hbm.xml" />
+    <EmbeddedResource Include="Models\TipoCobranca.hbm.xml" />
+    <EmbeddedResource Include="Models\Trailler.hbm.xml" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
