--- a/SiGCT/Web.config
+++ b/SiGCT/Web.config
@@ -5,8 +5,9 @@
   -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <!-- Others sections -->
+    <section name="hibernate-configuration" type="NHibernate.Cfg.ConfigurationSectionHandler, NHibernate" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -26,6 +27,123 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <!--  Configuração do Hibernate  -->
+  <hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
+    <session-factory>
+       <!--SQLite--> 
+      <property name="connection.driver_class">NHibernate.Driver.SQLite20Driver</property>
+      <property name="connection.connection_string">Data Source=|DataDirectory|dbIntegrationDCI.db;Version=3</property>
+      <property name="dialect">NHibernate.Dialect.SQLiteDialect</property>
+      <property name="query.substitutions">true=1;false=0</property>
+       <!--Fim SQLite--> 
+      <property name="query.substitutions">true 1, false 0, yes 'Y', no 'N'</property>
+      <property name="command_timeout">60</property>
+      <property name="adonet.batch_size">50</property>
+      <property name="current_session_context_class">web</property>
+      <property name="show_sql">true</property>
+      <property name="hbm2ddl.auto">
+        <!--validate | update | create | create-drop-->
+        create
+      </property>
+      <property name="generate_statistics">true</property>
+      <mapping assembly="SiGCT" />
+    </session-factory>
+  </hibernate-configuration>
+  <!-- This section contains the log4net configuration settings -->
+  <log4net>
+    <!-- Tipos de Logs -->
+    <!--<appender name="LogFileHibernateSQL" type="log4net.Appender.FileAppender">
+      -->
+    <!--Caminho onde o arquivo será gerado -->
+    <!--
+      <param name="File" value="logs\\nHibernateSQL.txt" />
+      <layout type="log4net.Layout.PatternLayout">
+        -->
+    <!--o que será incluido no arquivo -->
+    <!--
+        <param name="ConversionPattern" value="%d [%t] %-5p %c %m%n" />
+      </layout>
+    </appender>-->
+    <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
+      <!--Caminho onde o arquivo será gerado -->
+      <file value="logs\\" />
+      <appendToFile value="true" />
+      <rollingStyle value="Composite" />
+      <staticLogFileName value="false" />
+      <datePattern value="dd-MM-yyyy_HHmmss'.log'" />
+      <layout type="log4net.Layout.PatternLayout">
+        <!--o que será incluido no arquivo -->
+        <conversionPattern value="%d [%t] %-5p %c %m%n" />
+      </layout>
+    </appender>
+    <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
+      <target value="Console.Error" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline" />
+      </layout>
+    </appender>
+    <!-- appender responsavel por imprimir na OutPut da IDE-->
+    <appender name="TraceAppender" type="log4net.Appender.TraceAppender">
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%-5level %logger - %message %newline" />
+      </layout>
+    </appender>
+    <!--Logs da Aplicação no DB-->
+    <appender name="AdoNetAppender" type="log4net.Appender.AdoNetAppender">
+      <bufferSize value="100" />
+      <connectionType value="Finisar.SQLite.SQLiteConnection, SQLite.NET, Version=0.21.1869.3794, Culture=neutral, PublicKeyToken=c273bd375e695f9c" />
+      <connectionString value="Data Source=|DataDirectory|SiGCT.db;Version=3" />
+      <commandText value="INSERT INTO Log (Date, Level, Logger, Message) VALUES (@Date, @Level, @Logger, @Message)" />
+      <parameter>
+        <parameterName value="@Date" />
+        <dbType value="DateTime" />
+        <layout type="log4net.Layout.RawTimeStampLayout" />
+      </parameter>
+      <parameter>
+        <parameterName value="@Level" />
+        <dbType value="String" />
+        <layout type="log4net.Layout.PatternLayout">
+          <conversionPattern value="%level" />
+        </layout>
+      </parameter>
+      <parameter>
+        <parameterName value="@Logger" />
+        <dbType value="String" />
+        <layout type="log4net.Layout.PatternLayout">
+          <conversionPattern value="%logger" />
+        </layout>
+      </parameter>
+      <parameter>
+        <parameterName value="@Message" />
+        <dbType value="String" />
+        <layout type="log4net.Layout.PatternLayout">
+          <conversionPattern value="%message" />
+        </layout>
+      </parameter>
+    </appender>
+    <appender name="DebugSQL" type="log4net.Appender.TraceAppender">
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline" />
+      </layout>
+    </appender>
+    <!-- O que será logado -->
+    <logger name="LogInFile">
+      <level value="DEBUG" />
+      <!--Utilizando qual appender -->
+      <appender-ref ref="LogFileAppender" />
+    </logger>
+    <logger name="NHibernate">
+      <level value="ERROR" />
+      <!--Utilizando qual appender -->
+      <appender-ref ref="TraceAppender" />
+    </logger>
+    <logger name="NHibernate.Tool.hbm2ddl">
+      <level value="DEBUG" />
+      <!--Utilizando qual appender -->
+      <appender-ref ref="LogFileAppender" />
+    </logger>
+    <!--levels: DEBUG, INFO, WARN, ERROR, FATAL-->
+  </log4net>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -50,21 +168,8 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
-      <parameters>
-        <parameter value="v12.0" />
-      </parameters>
-    </defaultConnectionFactory>
-    <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-      <provider invariantName="System.Data.SQLite.EF6" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
-    </providers>
-  </entityFramework>
   <system.data>
     <DbProviderFactories>
-      <remove invariant="System.Data.SQLite.EF6" />
-      <add name="SQLite Data Provider (Entity Framework 6)" invariant="System.Data.SQLite.EF6" description=".NET Framework Data Provider for SQLite (Entity Framework 6)" type="System.Data.SQLite.EF6.SQLiteProviderFactory, System.Data.SQLite.EF6" />
     <remove invariant="System.Data.SQLite" /><add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" /></DbProviderFactories>
   </system.data>
 </configuration>
