Ajustes no projeto

--- a/SiGCT/Web.config
+++ b/SiGCT/Web.config
@@ -32,7 +32,7 @@
     <session-factory>
        <!--SQLite--> 
       <property name="connection.driver_class">NHibernate.Driver.SQLite20Driver</property>
-      <property name="connection.connection_string">Data Source=|DataDirectory|dbIntegrationDCI.db;Version=3</property>
+      <property name="connection.connection_string">Data Source=|DataDirectory|dbSiGCT.db;Version=3</property>
       <property name="dialect">NHibernate.Dialect.SQLiteDialect</property>
       <property name="query.substitutions">true=1;false=0</property>
        <!--Fim SQLite--> 
