Incluido o controller de Conta e ajustes no projeto

--- a/SiGCT/Web.config
+++ b/SiGCT/Web.config
@@ -8,6 +8,7 @@
     <!-- Others sections -->
     <section name="hibernate-configuration" type="NHibernate.Cfg.ConfigurationSectionHandler, NHibernate" />
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -30,12 +31,12 @@
   <!--  Configuração do Hibernate  -->
   <hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
     <session-factory>
-       <!--SQLite--> 
+      <!--SQLite-->
       <property name="connection.driver_class">NHibernate.Driver.SQLite20Driver</property>
       <property name="connection.connection_string">Data Source=|DataDirectory|dbSiGCT.db;Version=3</property>
       <property name="dialect">NHibernate.Dialect.SQLiteDialect</property>
       <property name="query.substitutions">true=1;false=0</property>
-       <!--Fim SQLite--> 
+      <!--Fim SQLite-->
       <property name="query.substitutions">true 1, false 0, yes 'Y', no 'N'</property>
       <property name="command_timeout">60</property>
       <property name="adonet.batch_size">50</property>
@@ -170,6 +171,20 @@
   </runtime>
   <system.data>
     <DbProviderFactories>
+      <remove invariant="System.Data.SQLite.EF6" />
+      <add name="SQLite Data Provider (Entity Framework 6)" invariant="System.Data.SQLite.EF6" description=".NET Framework Data Provider for SQLite (Entity Framework 6)" type="System.Data.SQLite.EF6.SQLiteProviderFactory, System.Data.SQLite.EF6" />
     <remove invariant="System.Data.SQLite" /><add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" /></DbProviderFactories>
   </system.data>
-</configuration>
+  <entityFramework>
+    <providers>
+      <provider invariantName="System.Data.SQLite.EF6" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
+    </providers>
+  </entityFramework>
+<system.webServer>
+    <handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers>
+  </system.webServer></configuration>
