Classes DAO criadas

--- a/SiGCT/SiGCT.csproj
+++ b/SiGCT/SiGCT.csproj
@@ -212,10 +212,33 @@
     <Compile Include="Models\CNL.cs" />
     <Compile Include="Models\Cobranca.cs" />
     <Compile Include="Models\CSP.cs" />
-    <Compile Include="Models\DAO\Util\GenericDAO.cs" />
-    <Compile Include="Models\DAO\Util\IGenericDAO.cs" />
-    <Compile Include="Models\DAO\Util\NHibernateSessionManager.cs" />
-    <Compile Include="Models\DAO\Util\NHibernateSessionModule.cs" />
+    <Compile Include="Models\DAO\AjusteDAO.cs" />
+    <Compile Include="Models\DAO\BancoDAO.cs" />
+    <Compile Include="Models\DAO\CategoriaDAO.cs" />
+    <Compile Include="Models\DAO\CentroCustoDAO.cs" />
+    <Compile Include="Models\DAO\ChamadaDAO.cs" />
+    <Compile Include="Models\DAO\ClienteDAO.cs" />
+    <Compile Include="Models\DAO\CNLDAO.cs" />
+    <Compile Include="Models\DAO\CobrancaDAO.cs" />
+    <Compile Include="Models\DAO\ContaDAO.cs" />
+    <Compile Include="Models\DAO\CspDAO.cs" />
+    <Compile Include="Models\DAO\DescontoDAO.cs" />
+    <Compile Include="Models\DAO\EnderecosRecursoDAO.cs" />
+    <Compile Include="Models\DAO\FaturaDAO.cs" />
+    <Compile Include="Models\DAO\Helper\GenericDAO.cs" />
+    <Compile Include="Models\DAO\Helper\IGenericDAO.cs" />
+    <Compile Include="Models\DAO\Helper\NHibernateSessionManager.cs" />
+    <Compile Include="Models\DAO\Helper\NHibernateSessionModule.cs" />
+    <Compile Include="Models\DAO\InformativoGerencialDAO.cs" />
+    <Compile Include="Models\DAO\NotaFiscalDAO.cs" />
+    <Compile Include="Models\DAO\OperadoraDAO.cs" />
+    <Compile Include="Models\DAO\PessoaDAO.cs" />
+    <Compile Include="Models\DAO\PlanoDAO.cs" />
+    <Compile Include="Models\DAO\RecursoDAO.cs" />
+    <Compile Include="Models\DAO\ResumoDAO.cs" />
+    <Compile Include="Models\DAO\ServicoDAO.cs" />
+    <Compile Include="Models\DAO\TipoCobrancaDAO.cs" />
+    <Compile Include="Models\DAO\TraillerDAO.cs" />
     <Compile Include="Models\Desconto.cs" />
     <Compile Include="Models\EnderecosRecurso.cs" />
     <Compile Include="Models\Conta.cs" />
