Ajustes no projeto

--- a/SiGCT/Web.config
+++ b/SiGCT/Web.config
@@ -8,7 +8,7 @@
     <!-- Others sections -->
     <section name="hibernate-configuration" type="NHibernate.Cfg.ConfigurationSectionHandler, NHibernate" />
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <!--<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />-->
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <!--
@@ -23,14 +23,14 @@
     <compilation debug="true" targetFramework="4.5.2" />
     <pages controlRenderingCompatibilityVersion="4.0" />
   </system.web>
-  
+
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
-  
+
   <!--  Configuração do Hibernate  -->
   <hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
     <session-factory>
@@ -53,7 +53,7 @@
       <mapping assembly="SiGCT.Data.NH" />
     </session-factory>
   </hibernate-configuration>
-  
+
   <!-- This section contains the log4net configuration settings -->
   <log4net>
     <!-- Tipos de Logs -->
@@ -149,7 +149,7 @@
     </logger>
     <!--levels: DEBUG, INFO, WARN, ERROR, FATAL-->
   </log4net>
-  
+
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -178,8 +178,8 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  
-  <entityFramework>
+
+  <!--<entityFramework>
     <providers>
       <provider invariantName="System.Data.SQLite.EF6" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
@@ -189,8 +189,8 @@
         <parameter value="mssqllocaldb" />
       </parameters>
     </defaultConnectionFactory>
-  </entityFramework>
-  
+  </entityFramework>-->
+
   <system.webServer>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
@@ -199,10 +199,13 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
   </system.webServer>
-  
-<system.data>
+
+  <system.data>
     <DbProviderFactories>
       <remove invariant="System.Data.SQLite.EF6" />
       <add name="SQLite Data Provider (Entity Framework 6)" invariant="System.Data.SQLite.EF6" description=".NET Framework Data Provider for SQLite (Entity Framework 6)" type="System.Data.SQLite.EF6.SQLiteProviderFactory, System.Data.SQLite.EF6" />
-    <remove invariant="System.Data.SQLite" /><add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" /></DbProviderFactories>
-  </system.data></configuration>
+      <remove invariant="System.Data.SQLite" />
+      <add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" />
+    </DbProviderFactories>
+  </system.data>
+</configuration>
