Corrigindo erros no mapeamento hbm

--- a/SiGCT/Web.config
+++ b/SiGCT/Web.config
@@ -8,9 +8,6 @@
     <!-- Others sections -->
     <section name="hibernate-configuration" type="NHibernate.Cfg.ConfigurationSectionHandler, NHibernate" />
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
-    <!--<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />-->
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -30,6 +27,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+
   <!--  Configuração do Hibernate  -->
   <hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
     <session-factory>
@@ -44,6 +42,7 @@
       <property name="adonet.batch_size">50</property>
       <property name="current_session_context_class">web</property>
       <property name="show_sql">true</property>
+      <property name="format_sql">true</property>
       <property name="hbm2ddl.auto">
         <!--validate | update | create | create-drop-->
         create
@@ -52,8 +51,16 @@
       <mapping assembly="SiGCT.Data" />
     </session-factory>
   </hibernate-configuration>
+
   <!-- This section contains the log4net configuration settings -->
   <log4net>
+    <root>
+      <!--levels: DEBUG, INFO, WARN, ERROR, FATAL-->
+      <level value="INFO" />
+      <appender-ref ref="AdoNetAppender" />
+      <appender-ref ref="LogFileAppender" />
+      <appender-ref ref="TraceAppender" />
+    </root>
     <!-- Tipos de Logs -->
     <!--<appender name="LogFileHibernateSQL" type="log4net.Appender.FileAppender">
       -->
@@ -143,10 +150,11 @@
     <logger name="NHibernate.Tool.hbm2ddl">
       <level value="DEBUG" />
       <!--Utilizando qual appender -->
-      <appender-ref ref="LogFileAppender" />
+      <appender-ref ref="TraceAppender" />
     </logger>
     <!--levels: DEBUG, INFO, WARN, ERROR, FATAL-->
   </log4net>
+
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -175,17 +183,8 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <!--<entityFramework>
-    <providers>
-      <provider invariantName="System.Data.SQLite.EF6" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    </providers>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
-      <parameters>
-        <parameter value="mssqllocaldb" />
-      </parameters>
-    </defaultConnectionFactory>
-  </entityFramework>-->
+
+
   <system.webServer>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
@@ -194,15 +193,5 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
   </system.webServer>
-  <system.data>
-    <DbProviderFactories>
-      <remove invariant="System.Data.SQLite.EF6" />
-      <add name="SQLite Data Provider (Entity Framework 6)" invariant="System.Data.SQLite.EF6" description=".NET Framework Data Provider for SQLite (Entity Framework 6)" type="System.Data.SQLite.EF6.SQLiteProviderFactory, System.Data.SQLite.EF6" />
-    <remove invariant="System.Data.SQLite" /><add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" /></DbProviderFactories>
-  </system.data>
-  <entityFramework>
-    <providers>
-      <provider invariantName="System.Data.SQLite.EF6" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
-    </providers>
-  </entityFramework>
+
 </configuration>
