Atualizando NHibernate para 5.0.1

--- a/SiGCT/Web.config
+++ b/SiGCT/Web.config
@@ -18,23 +18,21 @@
       </system.Web>
   -->
   <system.web>
-    <compilation debug="true" targetFramework="4.5.2" />
+    <compilation debug="true" targetFramework="4.6.2" />
     <pages controlRenderingCompatibilityVersion="4.0" />
   </system.web>
-
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
-
   <!--  Configuração do Hibernate  -->
   <hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
     <session-factory>
       <!--SQLite-->
       <property name="connection.driver_class">NHibernate.Driver.SQLite20Driver</property>
-      <property name="connection.connection_string">Data Source=|DataDirectory|db_SiGCT.db;Version=3</property>
+      <property name="connection.connection_string">Data Source=|DataDirectory|SiGCT.db;Version=3</property>
       <property name="dialect">NHibernate.Dialect.SQLiteDialect</property>
       <property name="query.substitutions">true=1;false=0</property>
       <!--Fim SQLite-->
@@ -52,7 +50,6 @@
       <mapping assembly="SiGCT.Data" />
     </session-factory>
   </hibernate-configuration>
-
   <!-- This section contains the log4net configuration settings -->
   <log4net>
     <root>
@@ -155,7 +152,6 @@
     </logger>
     <!--levels: DEBUG, INFO, WARN, ERROR, FATAL-->
   </log4net>
-
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -184,8 +180,6 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-
-
   <system.webServer>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
@@ -194,5 +188,4 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
   </system.webServer>
-
 </configuration>
