--- a/SiGCT/packages.config
+++ b/SiGCT/packages.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net452" />
+  <package id="Antlr3.Runtime" version="3.5.1" targetFramework="net462" />
   <package id="bootstrap" version="3.3.7" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
-  <package id="Iesi.Collections" version="4.0.1.4000" targetFramework="net452" />
+  <package id="Iesi.Collections" version="4.0.4" targetFramework="net462" />
   <package id="jQuery" version="3.1.1" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.16.0" targetFramework="net452" />
   <package id="log4net" version="2.0.8" targetFramework="net452" />
@@ -19,8 +20,10 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.8.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net452" />
-  <package id="NHibernate" version="4.1.1.4000" targetFramework="net452" />
-  <package id="NHibernate.Envers" version="2.2.0" targetFramework="net452" />
-  <package id="System.Data.SQLite.Core" version="1.0.105.1" targetFramework="net452" />
+  <package id="NHibernate" version="5.1.0" targetFramework="net462" />
+  <package id="NHibernate.Envers" version="5.1.0" targetFramework="net462" />
+  <package id="Remotion.Linq" version="2.1.2" targetFramework="net462" />
+  <package id="Remotion.Linq.EagerFetching" version="2.1.0" targetFramework="net462" />
+  <package id="System.Data.SQLite.Core" version="1.0.105.1" targetFramework="net452" requireReinstallation="true" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
 </packages>
